<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
       android:id="@+id/volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/volume_up"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_gravity="center"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/bird"
                tools:ignore="VectorDrawableCompat"
                android:padding="10dp"
                android:contentDescription="@string/bird"
                android:id="@+id/bird"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bird"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/green_bee"
                tools:ignore="VectorDrawableCompat"
                android:padding="10dp"
                android:contentDescription="@string/enemy1"
                android:id="@+id/enemy1"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enemy1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/red_bee"
                tools:ignore="VectorDrawableCompat"
                android:padding="10dp"
                android:contentDescription="@string/enemy2"
                android:id="@+id/enemy2"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enemy2"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/grey_bee"
                tools:ignore="VectorDrawableCompat"
                android:padding="10dp"
                android:id="@+id/enemy3"
                android:contentDescription="@string/enemy3" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enemy3"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/coin"
                tools:ignore="VectorDrawableCompat"
                android:padding="10dp"
                android:id="@+id/coin"
                android:contentDescription="@string/coin" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_points"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/info"
        android:textSize="18sp"
        android:textColor="#A80F47"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/start_game"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="15dp"
        android:textColor="#B71C1C"
        android:textSize="30sp"
        app:cornerRadius="30dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:id="@+id/button_start"
        />
</LinearLayout>